library works for anime and wake up

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
-# Do a Library for series
-# Next Downloads
-# Improve Backend Speed
+# 1. Do a Library for series
+# 2.  Next Downloads
+# 3. Improve Backend Speed
+# 4. For series to work on wish list the original language needs to be stored in the database.
